ghost-prod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
      - image: ghost:latest
        name: ghost
        ports:
        - containerPort: 2368
      - env:
        - name: url
          value: https://blog.weave.red
