ghost-prod/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ghost
spec:
  ports:
  - port: 3001
    targetPort: 2368
  selector:
    app: ghost
